# relay

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  prices.json
.github/: FUNDING.yml
scripts/: onboard.sh
src/: cli.rs  config.rs  credentials.rs  error.rs  ledger.rs  lib.rs  main.rs  pricing.rs  request.rs  service.rs
src/adapters/: anthropic.rs  mod.rs  openai.rs
tests/: adapter_conformance.rs
