[package]
name = "relay"
version = "0.1.0"
edition = "2024"
description = "A local-first control plane for visible, capped, and routed AI coding calls"
license = "AGPL-3.0-only"
readme = "README.md"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
